--- a/de.lproj/preferencesGeneralViewController.strings
+++ b/de.lproj/preferencesGeneralViewController.strings
@@ -1,6 +1,6 @@
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "2Iy-x3-QKJ"; */
-"2Iy-x3-QKJ.title" = "Box";
+"2Iy-x3-QKJ.title" = "Feld"; //A
 
 /* Class = "NSButtonCell"; title = "Keep always on top"; ObjectID = "5KC-MQ-7fc"; */
 "5KC-MQ-7fc.title" = "Keep always on top";
@@ -12,7 +12,7 @@
 "7qn-T7-ruB.title" = "List recently opened items";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "7vn-qv-CEQ"; */
-"7vn-qv-CEQ.title" = "Box";
+"7vn-qv-CEQ.title" = "Feld"; //A
 
 /* Class = "NSTextFieldCell"; title = "Default zoom"; ObjectID = "8R8-C7-F4i"; */
 "8R8-C7-F4i.title" = "Default zoom";
@@ -21,7 +21,7 @@
 "8gm-BS-eqC.title" = "Sort media files by";
 
 /* Class = "NSButtonCell"; title = "Points"; ObjectID = "91x-64-bJ9"; */
-"91x-64-bJ9.title" = "Points";
+"91x-64-bJ9.title" = "Punkt"; //A
 
 /* Class = "NSButtonCell"; title = "Date added"; ObjectID = "Cic-3u-pg5"; */
 "Cic-3u-pg5.title" = "Date added";
@@ -39,10 +39,10 @@
 "FI4-Lc-u0F.title" = "Always show confirmation";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "FYT-hM-LhR"; */
-"FYT-hM-LhR.title" = "Box";
+"FYT-hM-LhR.title" = "Feld"; //A
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "HTQ-0l-YJx"; */
-"HTQ-0l-YJx.title" = "Box";
+"HTQ-0l-YJx.title" = "Feld"; //A
 
 /* Class = "NSButtonCell"; title = "File size"; ObjectID = "Kdj-tC-acJ"; */
 "Kdj-tC-acJ.title" = "File size";
@@ -63,7 +63,7 @@
 "Sc4-2j-8ms.title" = "Use existing window for the same folder";
 
 /* Class = "NSTextFieldCell"; title = "Actual Size"; ObjectID = "UsA-ZU-Slq"; */
-"UsA-ZU-Slq.title" = "Actual Size";
+"UsA-ZU-Slq.title" = "Originalgröße"; //A
 
 /* Class = "NSButtonCell"; title = "Automatically set sort mode based on Finder's sort column"; ObjectID = "VDb-Ze-X4P"; */
 "VDb-Ze-X4P.title" = "Automatically set sort mode based on Finder's sort column";
@@ -72,10 +72,10 @@
 "Wf9-JJ-N3n.title" = "Keep aspect ratio when resizing";
 
 /* Class = "NSButtonCell"; title = "Shuffle"; ObjectID = "XQe-uj-4X2"; */
-"XQe-uj-4X2.title" = "Shuffle";
+"XQe-uj-4X2.title" = "Shuffle"; //A
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "ato-UQ-pb9"; */
-"ato-UQ-pb9.title" = "Box";
+"ato-UQ-pb9.title" = "Feld"; //A
 
 /* Class = "NSTextFieldCell"; title = "Deleting files and folders"; ObjectID = "gsV-rn-zs2"; */
 "gsV-rn-zs2.title" = "Deleting files and folders";
@@ -93,13 +93,13 @@
 "j2E-63-h1q.title" = "File type";
 
 /* Class = "NSButtonCell"; title = "Pixels"; ObjectID = "jNp-fN-bqc"; */
-"jNp-fN-bqc.title" = "Pixels";
+"jNp-fN-bqc.title" = "Pixel"; //A
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "k7Y-lM-Atq"; */
-"k7Y-lM-Atq.title" = "Box";
+"k7Y-lM-Atq.title" = "Feld"; //A
 
 /* Class = "NSButtonCell"; title = "Name"; ObjectID = "lKi-Hv-8WF"; */
-"lKi-Hv-8WF.title" = "Name";
+"lKi-Hv-8WF.title" = "Name"; //A
 
 /* Class = "NSTextFieldCell"; title = "Recent items"; ObjectID = "lmr-B1-vI2"; */
 "lmr-B1-vI2.title" = "Recent items";
@@ -117,13 +117,13 @@
 "qwJ-si-VBu.title" = "Use existing window for any folder";
 
 /* Class = "NSTextFieldCell"; title = "Window"; ObjectID = "rba-Lk-QXc"; */
-"rba-Lk-QXc.title" = "Window";
+"rba-Lk-QXc.title" = "Fenster"; //A
 
 /* Class = "NSTextFieldCell"; title = "Fixed Size and Position"; ObjectID = "yYH-QK-MpA"; */
 "yYH-QK-MpA.title" = "Fixed Size and Position";
 
 /* Class = "NSTextFieldCell"; title = "Actual Size"; ObjectID = "ysg-55-8kg"; */
-"ysg-55-8kg.title" = "Actual Size";
+"ysg-55-8kg.title" = "Originalgröße"; //A
 
 /* Class = "NSTextFieldCell"; title = "Fit To Screen"; ObjectID = "zXk-De-iOY"; */
 "zXk-De-iOY.title" = "Fit To Screen";
