--- a/de.lproj/preferencesAccessSheetController.strings
+++ b/de.lproj/preferencesAccessSheetController.strings
@@ -3,13 +3,13 @@
 "Dbc-8H-lMa.title" = "Grant or revoke the access:";
 
 /* Class = "NSButtonCell"; title = "Done"; ObjectID = "F31-ys-eOi"; */
-"F31-ys-eOi.title" = "Done";
+"F31-ys-eOi.title" = "Fertig"; //A
 
 /* Class = "NSTextFieldCell"; title = "Table View Cell"; ObjectID = "XiJ-wc-qYt"; */
-"XiJ-wc-qYt.title" = "Table View Cell";
+"XiJ-wc-qYt.title" = "Tabellenansichtzelle"; //A
 
 /* Class = "NSTableColumn"; headerCell.title = "Folder"; ObjectID = "YtJ-3e-7wD"; */
-"YtJ-3e-7wD.headerCell.title" = "Folder";
+"YtJ-3e-7wD.headerCell.title" = "Ordner"; //A
 
 /* Class = "NSTextFieldCell"; title = "Text Cell"; ObjectID = "giJ-Z4-4DX"; */
-"giJ-Z4-4DX.title" = "Text Cell";
+"giJ-Z4-4DX.title" = "Textzelle"; //A
