--- a/de.lproj/preferencesAppearanceViewController.strings
+++ b/de.lproj/preferencesAppearanceViewController.strings
@@ -1,6 +1,6 @@
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "0IV-IR-otP"; */
-"0IV-IR-otP.title" = "Box";
+"0IV-IR-otP.title" = "Feld"; //A
 
 /* Class = "NSButtonCell"; title = "Show file names"; ObjectID = "3nV-9V-gas"; */
 "3nV-9V-gas.title" = "Show file names";
@@ -12,7 +12,7 @@
 "5EP-eN-UCj.title" = "Show file names";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "Amg-Ae-ybc"; */
-"Amg-Ae-ybc.title" = "Box";
+"Amg-Ae-ybc.title" = "Feld"; //A
 
 /* Class = "NSTextFieldCell"; title = "Media Window"; ObjectID = "Dtn-HC-Ba6"; */
 "Dtn-HC-Ba6.title" = "Media Window";
@@ -33,7 +33,7 @@
 "P2E-Gh-Ddt.title" = "Hide thumbnails panel automatically";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "R27-9r-DyL"; */
-"R27-9r-DyL.title" = "Box";
+"R27-9r-DyL.title" = "Feld"; //A
 
 /* Class = "NSButtonCell"; title = "Animate Show Previous/Next media actions"; ObjectID = "RTj-IL-rf3"; */
 "RTj-IL-rf3.title" = "Animate Show Previous/Next media actions";
@@ -45,10 +45,10 @@
 "WeQ-iF-4I5.title" = "Full screen background";
 
 /* Class = "NSMenuItem"; title = "System default"; ObjectID = "XRc-FW-CYe"; */
-"XRc-FW-CYe.title" = "System default";
+"XRc-FW-CYe.title" = "Systemstandard"; //A
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "Xod-Ki-J3G"; */
-"Xod-Ki-J3G.title" = "Box";
+"Xod-Ki-J3G.title" = "Feld"; //A
 
 /* Class = "NSTextFieldCell"; title = "5 sec"; ObjectID = "ZTZ-5l-rBe"; */
 "ZTZ-5l-rBe.title" = "5 sec";
@@ -81,7 +81,7 @@
 "ot0-xz-PeI.title" = "Display a file name when you mouse over its thumbnail";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "y0i-P4-Mgr"; */
-"y0i-P4-Mgr.title" = "Box";
+"y0i-P4-Mgr.title" = "Feld"; //A
 
 /* Class = "NSButtonCell"; title = "Hide status bar automatically"; ObjectID = "zph-U7-RvC"; */
 "zph-U7-RvC.title" = "Hide status bar automatically";
