--- a/de.lproj/preferencesShortcutsViewController.strings
+++ b/de.lproj/preferencesShortcutsViewController.strings
@@ -3,7 +3,7 @@
 "9KK-3t-xZD.title" = "Customize Pixea shortcuts:";
 
 /* Class = "NSTableColumn"; headerCell.title = "Folder"; ObjectID = "UZU-so-m59"; */
-"UZU-so-m59.headerCell.title" = "Folder";
+"UZU-so-m59.headerCell.title" = "Ordner"; //A
 
 /* Class = "NSTextFieldCell"; title = "Next Image"; ObjectID = "VUf-W6-3O0"; */
 "VUf-W6-3O0.title" = "Next Image";
@@ -12,13 +12,13 @@
 "m9I-Wa-c89.title" = "PLUS";
 
 /* Class = "NSTextFieldCell"; title = "Text Cell"; ObjectID = "pva-Kw-3Xm"; */
-"pva-Kw-3Xm.title" = "Text Cell";
+"pva-Kw-3Xm.title" = "Textzelle"; //A
 
 /* Class = "NSTextFieldCell"; title = "SPACE is reserved for \"Hold Spacebar and Drag to Scroll\" and \"Play / Pause Video\" actions. Z and ⌥Z are reserved for \"Zoom In\" / \"Zoom Out\" actions."; ObjectID = "r8b-mT-VMR"; */
 "r8b-mT-VMR.title" = "SPACE is reserved for \"Hold Spacebar and Drag to Scroll\" and \"Play / Pause Video\" actions. Z and ⌥Z are reserved for \"Zoom In\" / \"Zoom Out\" actions.";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "wqY-nK-Suo"; */
-"wqY-nK-Suo.title" = "Box";
+"wqY-nK-Suo.title" = "Feld"; //A
 
 /* Class = "NSButtonCell"; title = "Swipe left/right to show previous/next image"; ObjectID = "xDv-OG-qlV"; */
 "xDv-OG-qlV.title" = "Swipe left/right to show previous/next image";
