Complete Localizable strings

--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -6,184 +6,184 @@
   Copyright © 2025 Andrey Tsarkov. All rights reserved.
 */
 
-"Unable to process image..." = "Unable to process image...";
-"Check avaliable memory and disk space. Try closing other apps and restarting Pixea." = "Check avaliable memory and disk space. Try closing other apps and restarting Pixea.";
-"OK" = "OK"; //A //A
-"Cancel" = "Отмена"; //A
-"macOS 11 or higher is required." = "macOS 11 or higher is required.";
-"macOS 10.15 or higher is required." = "macOS 10.15 or higher is required.";
-"Object Removal algorithm is based on Machine Learning features first introduced with macOS Big Sur. Update your macOS to use Object Removal tool." = "Object Removal algorithm is based on Machine Learning features first introduced with macOS Big Sur. Update your macOS to use Object Removal tool.";
-"Text Selection is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Text Selection Tool." = "Text Selection is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Text Selection Tool.";
-"Image Upscaling is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Image Upscaling." = "Image Upscaling is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Image Upscaling.";
-"No media" = "No media";
-"No supported media in this folder" = "No supported media in this folder";
-"Are you sure you want to move this folder to Trash?" = "Are you sure you want to move this folder to Trash?";
-"Are you sure you want to move this file to Trash?" = "Are you sure you want to move this file to Trash?";
-"This folder cannot be moved to Trash. Are you sure you want to delete it permanently?" = "This folder cannot be moved to Trash. Are you sure you want to delete it permanently?";
-"This file cannot be moved to Trash. Are you sure you want to delete it permanently?" = "This file cannot be moved to Trash. Are you sure you want to delete it permanently?";
-"\"%@\" will be moved to the Trash." = "\"%@\" will be moved to the Trash.";
-"\"%@\" will be deleted immediately. You can’t undo this action." = "\"%@\" will be deleted immediately. You can’t undo this action.";
-"Move To Trash" = "Переместить в Корзину"; //A
-"Delete" = "Удалить"; //A
-"Unable to delete '%@'" = "Unable to delete '%@'";
-"Check permissions or try again later." = "Check permissions or try again later.";
-"Drop your media here" = "Drop your media here";
-"Drop Image/Video file, Folder or Zip-Archive to start" = "Drop Image/Video file, Folder or Zip-Archive to start";
-"Favorites" = "Избранное"; //A
-"Recents" = "Недавние"; //A
-"Archived Media" = "Archived Media";
-"Media in this Folder" = "Media in this Folder";
-"Subfolders in this Archive" = "Subfolders in this Archive";
-"Subfolders and Archives" = "Subfolders and Archives";
-"Images: %lu" = "Images: %lu";
-"Images: %lu, Videos: %lu" = "Images: %lu, Videos: %lu";
-"Folders: %lu" = "Folders: %lu";
-"Folders: %lu, Archives: %lu" = "Folders: %lu, Archives: %lu";
-"Can't open" = "Can't open";
-"Unable to open this image file" = "Unable to open this image file";
-"Unable to open this video file" = "Unable to open this video file";
-"Unable to open this archive" = "Unable to open this archive";
-"No media" = "No media";
-"No supported media in this archive" = "No supported media in this archive";
-"No supported media in this folder" = "No supported media in this folder";
-"Nothing found" = "Nothing found";
-"Sorry, no matches found for '%@'" = "Sorry, no matches found for '%@'";
-"Image was edited" = "Image was edited";
-"You can choose to export the edited image, or ignore changes. You can’t undo this action." = "You can choose to export the edited image, or ignore changes. You can’t undo this action.";
-"Export Image..." = "Export Image...";
-"Export Image" = "Export Image";
-"Best" = "Best"; //export jpeg quality
-"Lossless" = "Lossless";
-"Ignore Changes" = "Ignore Changes";
-"Unable to process image..." = "Unable to process image...";
-"Unable to find your purchase..." = "Unable to find your purchase...";
-"Check your Apple Account or try again later." = "Check your Apple Account or try again later.";
-"No applications" = "No applications";
+"Unable to process image..." = "Не удалось обработать изображение...";
+"Check avaliable memory and disk space. Try closing other apps and restarting Pixea." = "Проверьте доступную память и дисковое пространство. Попробуйте закрыть другие приложения и перезапустить Pixea.";
+"OK" = "OK";
+"Cancel" = "Отмена";
+"macOS 11 or higher is required." = "Требуется macOS 11 или выше.";
+"macOS 10.15 or higher is required." = "Требуется macOS 10.15 или выше.";
+"Object Removal algorithm is based on Machine Learning features first introduced with macOS Big Sur. Update your macOS to use Object Removal tool." = "Алгоритм удаления объектов основан на функциях машинного обучения, впервые представленных в macOS Big Sur. Обновите macOS, чтобы использовать инструмент удаления объектов.";
+"Text Selection is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Text Selection Tool." = "Выбор текста основан на функциональности машинного обучения, впервые представленной в macOS Catalina. Обновите macOS, чтобы использовать инструмент выбора текста.";
+"Image Upscaling is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Image Upscaling." = "Апскейлинг изображений основан на функциональности машинного обучения, впервые представленной в macOS Catalina. Обновите macOS, чтобы использовать апскейлинг изображений.";
+"No media" = "Нет медиа";
+"No supported media in this folder" = "В этой папке нет поддерживаемых медиафайлов";
+"Are you sure you want to move this folder to Trash?" = "Вы уверены, что хотите переместить эту папку в корзину?";
+"Are you sure you want to move this file to Trash?" = "Вы уверены, что хотите переместить этот файл в корзину?";
+"This folder cannot be moved to Trash. Are you sure you want to delete it permanently?" = "Эту папку нельзя переместить в корзину. Вы уверены, что хотите удалить ее навсегда?";
+"This file cannot be moved to Trash. Are you sure you want to delete it permanently?" = "Этот файл не может быть перемещен в корзину. Вы уверены, что хотите удалить его навсегда?";
+"\"%@\" will be moved to the Trash." = "\"%@\" будет перемещен в корзину.";
+"\"%@\" will be deleted immediately. You can’t undo this action." = "\"%@\" будет удален немедленно. Вы не сможете отменить это действие.";
+"Move To Trash" = "Переместить в Корзину";
+"Delete" = "Удалить";
+"Unable to delete '%@'" = "Невозможно удалить '%@'";
+"Check permissions or try again later." = "Проверьте права доступа или повторите попытку позже.";
+"Drop your media here" = "Перетащите сюда свои медиафайлы";
+"Drop Image/Video file, Folder or Zip-Archive to start" = "Перетащите файл изображения/видео, папку или ZIP-архив, чтобы начать";
+"Favorites" = "Избранное";
+"Recents" = "Недавние";
+"Archived Media" = "Архивированные медиафайлы";
+"Media in this Folder" = "Медиа в этой папке";
+"Subfolders in this Archive" = "Подпапки в этом архиве";
+"Subfolders and Archives" = "Подпапки и Архивы";
+"Images: %lu" = "Изображения: %lu";
+"Images: %lu, Videos: %lu" = "Изображения: %lu, Видео: %lu";
+"Folders: %lu" = "Папки: %lu";
+"Folders: %lu, Archives: %lu" = "Папки: %lu, Архивы: %lu";
+"Can't open" = "Не могу открыть";
+"Unable to open this image file" = "Невозможно открыть этот файл изображения";
+"Unable to open this video file" = "Невозможно открыть этот видеофайл";
+"Unable to open this archive" = "Невозможно открыть этот архив";
+"No media" = "Нет медиафайлов";
+"No supported media in this archive" = "В этом архиве нет поддерживаемых медиафайлов";
+"No supported media in this folder" = "В этой папке нет поддерживаемых медиафайлов";
+"Nothing found" = "Ничего не найдено";
+"Sorry, no matches found for '%@'" = "Извините, совпадений для '%@' не найдено";
+"Image was edited" = "Изображение было отредактировано";
+"You can choose to export the edited image, or ignore changes. You can’t undo this action." = "Вы можете выбрать экспорт отредактированного изображения или игнорировать изменения. Вы не можете отменить это действие.";
+"Export Image..." = "Экспортировать изображение...";
+"Export Image" = "Экспортировать изображение";
+"Best" = "Лучшее"; //export jpeg quality
+"Lossless" = "Без потерь";
+"Ignore Changes" = "Игнорировать изменения";
+"Unable to process image..." = "Невозможно обработать изображение...";
+"Unable to find your purchase..." = "Не удалось найти вашу покупку...";
+"Check your Apple Account or try again later." = "Проверьте свою учетную запись Apple или повторите попытку позже.";
+"No applications" = "Нет приложений";
 
-"Preparing..." = "Подготовка..."; //A
-"Removing objects..." = "Removing objects...";
-"Processing transparency..." = "Processing transparency...";
-"Upscaling image..." = "Upscaling image...";
-"Loading..." = "Загрузка..."; //A
-"Stopping..." = "Остановка..."; //A //Stopping upscaling process
-
-
-"Created: %@" = "Created: %@"; //file created
-"Taken: %@" = "Taken: %@"; //photo taken
-"Resume at %@" = "Resume at %@"; //resume movie at timestamp
-"Frames" = "Рамки"; //A //gif frames
+"Preparing..." = "Подготовка...";
+"Removing objects..." = "Удаление объектов...";
+"Processing transparency..." = "Обработка прозрачности...";
+"Upscaling image..." = "Апсекейлинг изображения...";
+"Loading..." = "Загрузка...";
+"Stopping..." = "Отмена..."; //Stopping upscaling process
 
 
-"Grant Access" = "Grant Access";
-"No access" = "No access";
-"Access granted" = "Access granted";
-"Pixea needs write permissions to delete '%@'. Click \"Grant Access\" to continue." = "Pixea needs write permissions to delete '%@'. Click \"Grant Access\" to continue.";
-"**SPACE** is reserved for \"**Hold Spacebar and Drag to Scroll**\" and \"**Play / Pause Video**\" actions. **Z** and **⌥Z** are reserved for \"**Zoom In**\" / \"**Zoom Out**\" actions." = "**SPACE** is reserved for \"**Hold Spacebar and Drag to Scroll**\" and \"**Play / Pause Video**\" actions. **Z** and **⌥Z** are reserved for \"**Zoom In**\" / \"**Zoom Out**\" actions.";
+"Created: %@" = "Создан: %@"; //file created
+"Taken: %@" = "Снято: %@"; //photo taken
+"Resume at %@" = "Возобновить с %@"; //resume movie at timestamp
+"Frames" = "Кадры"; //gif frames
 
-"Clipboard" = "Буфер обмена"; //A
-"Unmute" = "Вкл. звук"; //A
-"Mute" = "Выкл. звук"; //A
-"Track %i - [%@]" = "Track %i - [%@]"; //track 1 - [spanish]
-"Track %i" = "Track %i";
 
-"Next" = "Далее"; //A //button on welcome screen
-"Done" = "Готово"; //A
+"Grant Access" = "Предоставить доступ";
+"No access" = "Нет доступа";
+"Access granted" = "Доступ предоставлен";
+"Pixea needs write permissions to delete '%@'. Click \"Grant Access\" to continue." = "Pixea нужны права на запись для удаления '%@'. Нажмите \"Предоставить доступ\", чтобы продолжить.";
+"**SPACE** is reserved for \"**Hold Spacebar and Drag to Scroll**\" and \"**Play / Pause Video**\" actions. **Z** and **⌥Z** are reserved for \"**Zoom In**\" / \"**Zoom Out**\" actions." = "**ПРОБЕЛ** зарезервирован для действий \"**Удерживайте пробел и перетащите для прокрутки**\" и \"**Воспроизвести / Приостановить видео**\". **Z** и **⌥Z** зарезервированы для действий \"**Увеличить**\" / \"**Уменьшить**\".";
 
-"Small" = "Small";
-"Large" = "Large";
-"Regular" = "Regular";
+"Clipboard" = "Буфер обмена";
+"Unmute" = "Вкл. звук";
+"Mute" = "Выкл. звук";
+"Track %i - [%@]" = "Дорожка %i - [%@]"; //track 1 - [spanish]
+"Track %i" = "Дорожка %i";
+
+"Next" = "Далее"; //button on welcome screen
+"Done" = "Готово";
+
+"Small" = "Маленький";
+"Large" = "Большой";
+"Regular" = "Стандартный";
 
 //touch bar items
-"Open File or Folder..." = "Open File or Folder...";
-"Recent:" = "Recent:";
-"New from Clipboard" = "Новое из буфера обмена"; //A
+"Open File or Folder..." = "Открыть файл или папку...";
+"Recent:" = "Недавнее:";
+"New from Clipboard" = "Новое из буфера обмена";
 
 //shortcuts
-"Scroll Up" = "Scroll Up";
-"Scroll Down" = "Scroll Down";
-"Scroll Left" = "Scroll Left";
-"Scroll Right" = "Scroll Right";
-"Previous Media" = "Предыдущий файл"; //A
-"Next Media" = "Следующий файл"; //A
-"Previous Frame/Step Backward 10s" = "Previous Frame/Step Backward 10s";
-"Next Frame/Step Forward 10s" = "Next Frame/Step Forward 10s";
-"Step Backward 30s" = "Step Backward 30s";
-"Step Forward 30s" = "Step Forward 30s";
-"Volume Up" = "Volume Up";
-"Volume Down" = "Volume Down";
-"Mute/Unmute" = "Mute/Unmute";
-"Slideshow" = "Слайд-шоу"; //A
-"Zoom In" = "Увеличить"; //A
-"Zoom Out" = "Уменьшить"; //A
-"Fit to Screen" = "По размеру экрана"; //A
-"Stretch to Fit" = "Stretch to Fit";
-"Fill Screen" = "Fill Screen";
-"Toggle Fullscreen" = "Toggle Fullscreen";
-"Actual Size" = "Реальный размер"; //A
-"Fixed Size & Position" = "Fixed Size & Position";
-"Playback Speed x 0.5" = "Playback Speed x 0.5";
-"Playback Speed x 0.9" = "Playback Speed x 0.9";
-"Playback Speed Normal" = "Playback Speed Normal";
-"Playback Speed x 1.1" = "Playback Speed x 1.1";
-"Playback Speed x 1.5" = "Playback Speed x 1.5";
-"Playback Speed x 2.0" = "Playback Speed x 2.0";
-"Rotate 180º" = "Rotate 180º";
-"Rotate 90º Clockwise" = "Rotate 90º Clockwise";
-"Rotate 90º Counter-clockwise" = "Rotate 90º Counter-clockwise";
-"Upscale Image" = "Upscale Image";
-"Eraser Tool" = "Eraser Tool";
-"Flip Horizontally" = "Перевернуть горизонтально"; //A
-"Flip Vertically" = "Перевернуть вертикально"; //A
-"Selection Tool" = "Selection Tool";
-"Deselect" = "Отменить выбор"; //A
-"Show Thumbnails" = "Показать миниатюры"; //A
-"Get Info" = "Свойства"; //A
-"Move to Trash" = "В Корзину"; //A
-"Show in Finder" = "Показать в Finder"; //A
-"Export..." = "Экспортировать..."; //A
-"Crop Image..." = "Crop Image...";
-"Hand Tool" = "Hand Tool";
-"Adjust Hue, Saturation, Brightness..." = "Adjust Hue, Saturation, Brightness...";
-"Adjust Color Temperature..." = "Adjust Color Temperature...";
-"Adjust Exposure..." = "Adjust Exposure...";
-"Resize Image..." = "Resize Image...";
-"Sharpness and Noise..." = "Sharpness and Noise...";
-"Clone Tool" = "Инструмент «Клонирование»"; //A
-"Text Selection Tool" = "Text Selection Tool";
-"Edit with: App #1" = "Edit with: App #1";
-"Edit with: App #2" = "Edit with: App #2";
-"Edit with: App #3" = "Edit with: App #3";
-"Edit with: App #4" = "Edit with: App #4";
-"Edit with: App #5" = "Edit with: App #5";
-"Step Forward 10s" = "Step Forward 10s";
-"Step Backward 10s" = "Step Backward 10s";
-"Step Forward 30s" = "Step Forward 30s";
-"Step Backward 30s" = "Step Backward 30s";
-"Hide Thumbnails" = "Скрыть миниатюры"; //A
-"Show Thumbnails" = "Показать миниатюры"; //A
-"Next Frame" = "Следующий кадр"; //A
-"Previous Frame" = "Предыдущий кадр"; //A
-"Next Media" = "Следующий файл"; //A
-"Previous Media" = "Предыдущий файл"; //A
-"Not set" = "Not set";
+"Scroll Up" = "Прокрутить вверх";
+"Scroll Down" = "Прокрутить вниз";
+"Scroll Left" = "Прокрутить влево";
+"Scroll Right" = "Прокрутить вправо";
+"Previous Media" = "Предыдущий медиафайл";
+"Next Media" = "Следующий медиафайл";
+"Previous Frame/Step Backward 10s" = "Предыдущий кадр/назад на 10 с";
+"Next Frame/Step Forward 10s" = "Следующий кадр/вперед 10 сек.";
+"Step Backward 30s" = "Назад на 30s";
+"Step Forward 30s" = "Вперед на 30s";
+"Volume Up" = "Увеличить громкость";
+"Volume Down" = "Уменьшить громкость";
+"Mute/Unmute" = "Отключить/Включить звук";
+"Slideshow" = "Слайд-шоу";
+"Zoom In" = "Увеличить";
+"Zoom Out" = "Уменьшить";
+"Fit to Screen" = "По размеру экрана";
+"Stretch to Fit" = "Растянуть до размера экрана";
+"Fill Screen" = "Заполнить экран";
+"Toggle Fullscreen" = "Переключить на полный экран";
+"Actual Size" = "Реальный размер";
+"Fixed Size & Position" = "Фиксированный размер и положение";
+"Playback Speed x 0.5" = "Скорость воспроизведения x 0.5";
+"Playback Speed x 0.9" = "Скорость воспроизведения x 0.9";
+"Playback Speed Normal" = "Нормальная скорость воспроизведения";
+"Playback Speed x 1.1" = "Скорость воспроизведения x 1.1";
+"Playback Speed x 1.5" = "Скорость воспроизведения x 1.5";
+"Playback Speed x 2.0" = "Скорость воспроизведения x 2.0";
+"Rotate 180º" = "Повернуть на 180º";
+"Rotate 90º Clockwise" = "Повернуть на 90º по часовой стрелке";
+"Rotate 90º Counter-clockwise" = "Повернуть на 90º против часовой стрелки";
+"Upscale Image" = "Апскейл изображения";
+"Eraser Tool" = "Инструмент «Ластик»";
+"Flip Horizontally" = "Перевернуть горизонтально";
+"Flip Vertically" = "Перевернуть вертикально";
+"Selection Tool" = "Инструмент «Выделение»";
+"Deselect" = "Снять выделение";
+"Show Thumbnails" = "Показать миниатюры";
+"Get Info" = "Свойства";
+"Move to Trash" = "В Корзину";
+"Show in Finder" = "Показать в Finder";
+"Export..." = "Экспорт...";
+"Crop Image..." = "Обрезать изображение...";
+"Hand Tool" = "Инструмент «Рука»";
+"Adjust Hue, Saturation, Brightness..." = "Отрегулируйте оттенок, насыщенность, яркость...";
+"Adjust Color Temperature..." = "Отрегулируйте цветовую температуру...";
+"Adjust Exposure..." = "Настройте экспозицию...";
+"Resize Image..." = "Изменить размер изображения...";
+"Sharpness and Noise..." = "Резкость и подавление шума...";
+"Clone Tool" = "Инструмент «Клонирование»";
+"Text Selection Tool" = "Инструмент выделения текста";
+"Edit with: App #1" = "Редактировать с помощью: Приложение №1";
+"Edit with: App #2" = "Редактировать с помощью: Приложение №2";
+"Edit with: App #3" = "Редактировать с помощью: Приложение №3";
+"Edit with: App #4" = "Редактировать с помощью: Приложение №4";
+"Edit with: App #5" = "Редактировать с помощью: Приложение №5";
+"Step Forward 10s" = "Вперед на 10с";
+"Step Backward 10s" = "Назад на 10с";
+"Step Forward 30s" = "Вперед на 30с";
+"Step Backward 30s" = "Назад на 30s";
+"Hide Thumbnails" = "Скрыть миниатюры";
+"Show Thumbnails" = "Показать миниатюры";
+"Next Frame" = "Следующий кадр";
+"Previous Frame" = "Предыдущий кадр";
+"Next Media" = "Следующий медиафайл";
+"Previous Media" = "Предыдущий медиафайл";
+"Not set" = "Не установлено";
 
 // Preferences items
-"Preferences" = "Настройки"; //A
-"General" = "Основные"; //A
-"Shortcuts" = "Shortcuts";
-"File Types" = "File Types";
-"Video" = "Видео"; //A
-"Folder Access" = "Folder Access";
-"Advanced" = "Дополнительно"; //A
-"More Apps" = "More Apps";
+"Preferences" = "Настройки";
+"General" = "Основные";
+"Shortcuts" = "Быстрые клавиши";
+"File Types" = "Типы файлов";
+"Video" = "Видео";
+"Folder Access" = "Доступ к папкам";
+"Advanced" = "Дополнительно";
+"More Apps" = "Больше приложений";
 
 
 // inches, cm/mm, pixels, points per inch, etc...
-"in" = "дюйм"; //A
-"mm" = "мм"; //A
-"cm" = "см"; //A
-"px" = "пикс"; //A
-"%ipx × %ipx" = "%ipx × %ipx";
-"%ipx × %ipx (%ippi)" = "%ipx × %ipx (%ippi)";
-"%@ bytes" = "%@ bytes";
-"%li sec" = "%li sec";
+"in" = "дюйм";
+"mm" = "мм";
+"cm" = "см";
+"px" = "пикс";
+"%ipx × %ipx" = "%iпикс × %iпикс";
+"%ipx × %ipx (%ippi)" = "%iпикс × %iпикс (%iпикс на дюйм)";
+"%@ bytes" = "%@ байт";
+"%li sec" = "%li сек";
